# backend/docs/swagger.json
@@ -9,6 +9,50 @@
     "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
+        "/auth/checktgtoken": {
+            "post": {
+                "description": "Check user telegram token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Check user telegram token",
+                "operationId": "Check user telegram token",
+                "parameters": [
+                    {
+                        "description": "token",
+                        "name": "token",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entities.JWTToken"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.JWTData"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/auth/logout": {
             "post": {
                 "description": "Logout user",
@@ -108,6 +152,33 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/auth/tgtoken": {
+            "get": {
+                "description": "Generate user telegram token",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Generate user telegram token",
+                "operationId": "generate user telegram token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.JWTToken"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -887,6 +958,23 @@
             "properties": {
                 "user": {
                     "$ref": "#/definitions/entities.UserInfo"
+                }
+            }
+        },
+        "entities.JWTData": {
+            "type": "object",
+            "properties": {
+                "user_id": {}
+            }
+        },
+        "entities.JWTToken": {
+            "type": "object",
+            "required": [
+                "token"
+            ],
+            "properties": {
+                "token": {
+                    "type": "string"
                 }
             }
         },
