# backend/internal/entities/jwt.go
@@ -1,0 +1,9 @@
+package entities
+
+type JWTToken struct {
+	Token string `json:"token" binding:"required"`
+}
+
+type JWTData struct {
+	UserID interface{} `json:"user_id"`
+}
